<resources>
    <string name="app_name">My App</string>
    <string name="login_main">Login</string>
    <string name="username_main">Username</string>
    <string name="password_main">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="create_an_account">Create an Account?</string>
    <string name="register_loginPage">Register</string>
    <string name="register_register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="verify_email"><u>verify Email</u></string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="verify_number"><u>verify Number</u></string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password_register">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="title_activity_navigate_admin">NavigateAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="upload_companies">Upload Companies</string>
    <string name="view_companies_list">View Companies List</string>
    <string name="companies_list">Companies List</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_recruitment_date">Enter Recruitment Date</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_department">Enter Department</string>
    <string name="save">Save</string>
    <string name="title_activity_navigate_admin_main">NavigateAdminActivity</string>
    <string name="company_name">Company Name</string>
    <string name="company_date">Company Date</string>
    <string name="company_location">Company Location</string>
    <string name="company_course">Company Course</string>
    <string name="admin">Admin</string>
    <string name="add_companies_admin">Add Companies</string>
    <string name="company_list_admin">Company List</string>
    <string name="upload_documents_admin">Upload Documents</string>
    <string name="enter_admin_code">Enter Admin Code</string>
    <string name="upload_documnet">Upload Documnet</string>
    <string name="upload">Upload</string>
    <string name="please_choose_document">please choose Document</string>
    <string name="get_otp">Get OTP</string>
    <string name="logout_admin">Logout</string>
    <string name="student">Student</string>
    <string name="company_list_student">Company List</string>
    <string name="view_documents_student">View Documents</string>
    <string name="update_placement_detail">Update Placement Detail</string>
    <string name="enter_name_stduent">Enter Name</string>
    <string name="enter_department_student">Enter Department</string>
    <string name="enter_company_name_student">Enter Company Name</string>
    <string name="enter_email_student">Enter Email</string>
    <string name="register_student">Register</string>
    <string name="person_name_regi">Person Name</string>
    <string name="person_email">Person Email</string>
    <string name="person_company">Person company</string>
    <string name="course_register">Course</string>
    <string name="registered_students">Registered Students</string>
    <string name="placed_student_list">Placed Student List</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">Welcome</string>
    <string name="placement_management">Placement Management</string>
    <string name="register_companies">register</string>
    <string name="exit">Exit</string>
    <string name="enter_college_code">Enter College Code</string>

    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_name_placementDetail">Enter Name</string>
    <string name="enter_usn_placdetail">Enter USN</string>
    <string name="enter_company_address_PD">Enter Company Address</string>
    <string name="enter_email_address_PD">Enter Email Address</string>
    <string name="update_PD">Update</string>
    <string name="update_addComp">Update</string>
</resources>