<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EE43A047"
    tools:context=".StudentHome">


<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/student"
android:layout_marginTop="80dp"
android:textAllCaps="true"
android:layout_gravity="center"
android:textSize="27sp"
android:textStyle="bold|italic"
android:textColor="@color/black"/>


<Button
android:layout_marginTop="30dp"
android:layout_width="195dp"
android:layout_height="wrap_content"
android:text="@string/company_list_student"
android:layout_gravity="center"
android:id="@+id/coButton"
android:gravity="center"/>


<Button
android:layout_width="195dp"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:layout_marginTop="10dp"
android:gravity="center"
android:id="@+id/viewDocument"
android:text="@string/view_documents_student" />

<Button
android:layout_marginTop="10dp"
android:layout_width="195dp"
android:layout_height="wrap_content"
android:text="@string/update_placement_detail"
android:layout_gravity="center"
android:id="@+id/updatepd"
android:gravity="center"/>



<Button
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:gravity="center"
android:text="@string/logout_admin"
android:layout_marginTop="230dp"
android:id="@+id/logoutStudent"/>

</LinearLayout>