<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:layout_margin="10dp"
    android:paddingBottom="20dp"
    android:background="#80D8FF"
 >

    <TextView
        android:id="@+id/register1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_name_regi"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/register2"
android:textStyle="bold"
android:text="@string/person_email"
android:textColor="@color/black"
    android:textSize="19sp"
    />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/register3"
android:textStyle="bold"
android:text="@string/person_company"
android:textColor="@color/black"
    android:textSize="19sp"
    />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/register4"
android:textStyle="bold"
android:text="@string/course_register"
android:textColor="@color/black"
    android:textSize="19sp"
    />


    </LinearLayout>