<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:background="#80D8FF"
    android:layout_margin="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/company1"
        android:text="@string/company_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="19sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/company2"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:text="@string/company_date"
        android:textColor="@color/black"
        android:textSize="19sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/company3"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:text="@string/company_location"
        android:textColor="@color/black"
        android:textSize="19sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/company4"
        android:layout_marginTop="3dp"
        android:textStyle="bold"
        android:text="@string/company_course"
        android:textColor="@color/black"
        android:textSize="19sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_companies"
        android:id="@+id/registerforComp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end"
        />

</LinearLayout>