<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Documents">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_documnet"
        android:layout_marginTop="180dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/chooseDocumnet"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="#FFE57F"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:hint="@string/please_choose_document"
        android:autofillHints="" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/uploadButton"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/upload"/>

</LinearLayout>