<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EE43A047"
    tools:context=".Screen2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_documnet"
        android:layout_marginTop="180dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:gravity="center"
        />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Upload Here"
    android:layout_gravity="center"
    android:textColorHint="@color/black"
    android:gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    />
    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="#2E7D32"
        android:gravity="center"
        android:hint="@string/please_choose_document"
        android:src="@drawable/ic_baseline_library_add_24" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/uploadButton"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/upload"/>
</LinearLayout>
